# CinderEight

./: .gitignore  README.md
AllInOne/resources/: AllInOneApp.icns
AllInOne/src/: AllInOneApp.cpp
AllInOne/xcode/: Info-IOS.plist  Info.plist
ArdroneControl08/include/: Resources.h
ArdroneControl08/resources/: CinderApp.icns  settings.xml
ArdroneControl08/src/: ardroneApp.cpp
ArdroneFfmpeg08/resources/: settings.xml
ArdroneFfmpeg08/src/: ardroneApp.cpp
AssimpIosDemo/assets/: astroboy_walk.dae  female.dae
AssimpIosDemo/src/: AssimpIosDemo.cpp
AssimpIosDemo/xcode_ios/: AssimpIosDemo_Prefix.pch  Info.plist
Audio2NodeBasic/src/: Audio2NodeBasicApp.cpp
AudioEngineSample/: .gitignore  CMakeLists.txt  README.md
AudioEngineSample/assets/: AudioEngine_Content.xml
AudioEngineSample/blocks/Cinder-MIDI/: MidiHub.h  MidiIn.h  MidiOut.cpp  MidiOut.h  RtMidi.cpp
AudioEngineSample/blocks/Cinder-MIDI/lib/: rtmidid.lib
AudioEngineSample/settings/: AudioEngine_Settings - Empty.xml
AudioEngineSample/src/: AudioEngineApp.cpp
AudioEngineSample/src/AudioEngine/: AudioDevice.cpp  AudioEngine.cpp  LineInput.cpp
AudioEngineSample/vc11/: AudioEngineSample.sln  AudioEngineSample.vcxproj  AudioEngineSample.vcxproj.filters  Resources.rc
CocoKinect/: README.md
HelloWorldShadertoy/: README.md
RTSPCapture0.9.0/: README.md
ToonCabinet/: README.md
bedrunken-audio-particles/: README
circuitShader/: README.md  Resources.h  circuitShader.cpp
fractalCartoon/: README.md  Resources.h  fractalCartoon.cpp
gogolrevizor-audio-particles/: README
gpgpuFrameBuffer/: README.md
(+1147 files in other folders)
